--- a/api-mercadolibre/readme
+++ b/api-mercadolibre/readme
@@ -1,21 +1,5 @@
-Variables de entorno
-open ~/.bash_profile
-ENDPOINT_ML = api.mercadolibre.com
-export URL_POSTGRES=localhost:5432/postgres 
-export USER_POSTGRES=postgres
-export PASS_POSTGRES=postgres
-
-
-
-
-bin/kafka-topics.sh --create --zookeeper 172.18.0.2:2181 --replication-factor 1 --partitions 100 --topic log_topic 
-bin/kafka-topics.sh --list --zookeeper 172.18.0.2:2181
-bin/kafka-console-consumer.sh --bootstrap-server localhost:9092 --topic log_topic --from-beginning
 
 
  
- 
- Despliegue
- 
- docker build -t "api-mercadolibre" .
- docker run --name api-mercadolibre  -p 8090:8080 api-mercadolibre:latest
+ docker build -t "api-item-image" .
+ docker run --name api-item  -p 8090:8080 api-item-image:latest --link postgres-db:postgres --link docker_kafka_1:kafka -e URL_ITEM=https://api.mercadolibre.com/items/$ITEMID -e URL_CHILDREN=https://api.mercadolibre.com/items/$ITEMID/children -e URL_CHILDREN=https://api.mercadolibre.com/items/$ITEMID/children -e KAKFA_HOST=172.18.0.3:9092 -e TOPIC=log_topic -e URL_POSTGRES=jdbc:postgresql://172.17.0.2:5432/postgres  -e USER_POSTGRES=postgres -e PASS_POSTGRES=postgres
